--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mocha-phantomjs": "~3.3.1",
     "grunt-mocha-phantomjs": "~0.4.0",
     "grunt-este-watch": "~0.1.15",
-    "grunt-contrib-connect": "~0.6.0"
+    "grunt-contrib-connect": "~0.6.0",
+    "brfs": "~0.1.0"
   }
 }
